--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -1180,21 +1180,21 @@
             "description": "秒数を入力してください",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字が必要です"
+            "input_error": "有効な数字を入力してください"
         },
         "overlay_message_timeout": {
             "header": "オーバーレイメッセージのタイムアウト時間",
             "description": "秒数を入力してください",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字が必要です"
+            "input_error": "有効な数字を入力してください"
         },
         "rename_avatar": {
             "header": "アバター名を変更",
             "description": "アバター名を入力してください",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な名前が必要です",
+            "input_error": "有効な名前を入力してください",
             "message": {
                 "success": "アバター名を変更しました"
             }
@@ -1204,7 +1204,7 @@
             "description": "アバターの説明を入力してください",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な説明文が必要です",
+            "input_error": "有効な説明文を入力してください",
             "message": {
                 "success": "アバターの説明を変更しました"
             }
@@ -1214,7 +1214,7 @@
             "description": "ワールド名を入力してください",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な名前が必要です",
+            "input_error": "有効な名前を入力してください",
             "message": {
                 "success": "ワールド名を変更しました"
             }
@@ -1224,7 +1224,7 @@
             "description": "ワールドの説明を入力してください",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な説明文が必要です",
+            "input_error": "有効な説明文を入力してください",
             "message": {
                 "success": "ワールドの説明を変更しました"
             }
@@ -1234,7 +1234,7 @@
             "description": "ワールドの最大人数を入力してください。最高値: 40",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字が必要です",
+            "input_error": "有効な数字を入力してください",
             "message": {
                 "success": "ワールドの最大人数を変更しました"
             }
@@ -1244,7 +1244,7 @@
             "description": "ワールドのYouTube 動画リンクを入力してください",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効なYouTube URLが必要です",
+            "input_error": "有効なYouTube URLを入力してください",
             "message": {
                 "error": "無効なYouTube URLです",
                 "success": "ワールドのYouTube プレビュー動画を変更しました"
@@ -1255,28 +1255,28 @@
             "description": "データベースからUIページに読み込まれるエントリの量を制限します。テーブル数が多くなるとRAM使用量とパフォーマンスに影響を及ぼす可能性があります。 (デフォルト:1000, 最高値: 10000)",
             "cancel": "キャンセル",
             "save": "保存",
-            "input_error": "有効な数字が必要です"
+            "input_error": "有効な数字を入力してください"
         },
         "photon_lobby_timeout": {
             "header": "ユーザータイムアウト しきい値",
             "description": "タイムアウトまでの秒数を入力してください (デフォルト: 3)",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字が必要です"
+            "input_error": "有効な数字を入力してください"
         },
         "auto_clear_cache": {
             "header": "VRCX キャッシュの自動消去タイマー",
             "description": "消去までの時間を入力してください。長い時間を指定するとRAM使用量とパフォーマンスに影響を及ぼす可能性があります。 (デフォルト: 24, 無効化: 0)",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "有効な数字が必要です"
+            "input_error": "有効な数字を入力してください"
         },
         "new_local_favorite_group": {
             "header": "新しいグループ",
             "description": "お気に入りワールド グループ名を入力してください",
             "cancel": "キャンセル",
             "ok": "OK",
-            "input_error": "名前が必要です",
+            "input_error": "名前を入力してください",
             "message": {
                 "error": "このグループ名は既に{name}として存在しています。"
             }
@@ -1286,7 +1286,7 @@
             "description": "お気に入りワールド グループ名を入力してください",
             "cancel": "キャンセル",
             "save": "保存",
-            "input_error": "名前が必要です",
+            "input_error": "名前を入力してください",
             "message": {
                 "error": "このグループ名は既に {name} として存在しています。"
             }
@@ -1296,7 +1296,7 @@
             "description": "オフライン保留の待機秒数を指定してください (デフォルト: 110)",
             "cancel": "キャンセル",
             "save": "保存",
-            "input_error": "有効な数字が必要です"
+            "input_error": "有効な数字を入力してください"
         }
     },
     "table": {
