--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -1252,7 +1252,7 @@
         },
         "change_table_size": {
             "header": "テーブルの最大数",
-            "description": "データベースからUIページに読み込まれるエントリの量を制限します。テーブル数が多くなるとRAM使用量とパフォーマンスに影響を及ぼす可能性があります。 (デフォルト:1000, 最高値: 10000)",
+            "description": "データベースからUIページに読み込まれるエントリの量を制限します。テーブル数が多いとRAM使用量とパフォーマンスに影響を及ぼす可能性があります。 (デフォルト:1000, 最高値: 10000)",
             "cancel": "キャンセル",
             "save": "保存",
             "input_error": "有効な数字を入力してください"
