--- a/html/src/localization/strings/en.json
+++ b/html/src/localization/strings/en.json
@@ -355,6 +355,7 @@
                     "launch_options": "Launch Options",
                     "screenshot_metadata": "Screenshot Metadata",
                     "auto_launch": "Auto-Launch Folder",
+                    "auto_launch_tooltip": "To auto-launch apps with VRChat, place shortcuts in this folder.",
                     "pending_offline": {
                         "header": "Pending Offline",
                         "description": "Delay before marking user as offline (fixes false positives)",
