Add GPU Fix and Udon Exception Logging options, unload favorites tab when not in use

--- a/html/src/localization/strings/en.json
+++ b/html/src/localization/strings/en.json
@@ -408,6 +408,8 @@
                     },
                     "cache_debug": {
                         "header": "VRCX Instance Cache/Debug",
+                        "udon_exception_logging": "Udon Exception Logging",
+                        "gpu_fix": "SteamVR Overlay GPU Fix",
                         "disable_gamelog": "Disable GameLog",
                         "disable_gamelog_notice": "(will likely break things)",
                         "user_cache": "User cache:",
