--- a/html/src/localization/strings/zh_CN.json
+++ b/html/src/localization/strings/zh_CN.json
@@ -512,7 +512,7 @@
                 "decline_friend_request": "回绝好友申请",
                 "cancel_friend_request": "取消好友申请",
                 "send_friend_request": "发送好友申请",
-                "show_avatar_author": "显示模型作者",
+                "show_avatar_author": "显示模型信息",
                 "show_fallback_avatar": "显示备用模型信息",
                 "show_previous_instances": "显示以前一起加入过的房间",
                 "show_previous_images": "显示以前使用过的图片",
