fix: :memo: fixed translation omission 2

--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -74,7 +74,7 @@
                 "sort_created": "作成順で並び替え"
             },
             "group": {
-                "header": "Group"
+                "header": "グループ"
             },
             "prev_page": "前",
             "next_page": "次"
