fix: :memo: translate omission 3

--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -821,7 +821,7 @@
             "access_type_friend": "Friends",
             "access_type_invite_plus": "Invite+",
             "access_type_invite": "Invite",
-            "group_access_type": "Group Access",
+            "group_access_type": "グループアクセス",
             "group_access_type_members": "メンバー",
             "group_access_type_plus": "Plus",
             "group_access_type_public": "Public",
