--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -225,6 +225,9 @@
                     "theme_mode_system": "システム",
                     "theme_mode_light": "ライト",
                     "theme_mode_dark": "ダーク",
+                    "theme_mode_darkvanilla": "Dark Vanilla",
+                    "theme_mode_pink": "Pink",
+                    "theme_mode_material3": "Material 3",
                     "vrcplus_profile_icons": "VRC+ プロフィールアイコン",
                     "disable_tooltips": "ツールチップを無効化",
                     "sort_favorite_by": "お気に入りを並び替え:",
@@ -740,6 +743,7 @@
             },
             "info": {
                 "header": "情報",
+                "instances": "インスタンス",
                 "announcement": "お知らせ",
                 "instance_full": "満員",
                 "rules": "ルール",
@@ -836,13 +840,19 @@
             "instance_creator": "インスタンス作者",
             "instance_creator_placeholder": "ユーザーを選択",
             "group_placeholder": "グループを選択",
+            "role_placeholder": "ロールを選択",
             "group_id": "グループID",
             "location": "場所",
             "url": "URL",
             "copy_url": "URLをコピー",
             "self_invite": "自分を招待",
             "invite": "招待",
-            "launch": "起動"
+            "launch": "起動",
+            "create_instance": "インスタンスを作成",
+            "queueEnabled": "キュー",
+            "normal": "通常",
+            "group": "グループ",
+            "roles": "ロール"
         },
         "launch_options": {
             "header": "VRChat 起動オプション",
@@ -915,7 +925,9 @@
             "launch": "起動"
         },
         "export_friends_list": {
-            "header": "フレンドリスト"
+            "header": "フレンドリスト",
+            "csv": "CSV",
+            "json": "JSON"
         },
         "export_own_avatars": {
             "header": "自分のアバター"
