--- a/html/src/localization/strings/zh_CN.json
+++ b/html/src/localization/strings/zh_CN.json
@@ -482,7 +482,7 @@
         "search_result_more": "搜索更多：",
         "direct_access_tooltip": "直接读取剪贴板的 ID / 链接",
         "refresh_tooltip": "刷新好友",
-        "groups": "群组实例",
+        "groups": "群组房间",
         "friends": "好友",
         "me": "我",
         "favorite": "星标好友",
