feat: :memo: 2023-07-14Tまで対応

--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -1111,7 +1111,8 @@
             "emojis": "絵文字",
             "refresh": "更新",
             "upload": "アップロード",
-            "clear": "消去"
+            "clear": "消去",
+            "emoji_animation_styles": "アニメーションスタイル"
         },
         "change_content_image": {
             "avatar": "アバターの画像を変更",
