fix: :memo: 違和感のある表現を修正

--- a/html/src/localization/strings/ja.json
+++ b/html/src/localization/strings/ja.json
@@ -703,9 +703,9 @@
                 "favorite_tooltip": "お気に入りに追加",
                 "unfavorite_tooltip": "お気に入りから削除",
                 "refresh": "更新",
-                "select": "アバターを使用",
-                "select_fallback": "フォールバックアバターを使用",
-                "block": "アバターをブロック",
+                "select": "このアバターを使用",
+                "select_fallback": "このフォールバックアバターを使用",
+                "block": "このアバターをブロック",
                 "unblock": "アバターをブロック解除",
                 "show_previous_images": "以前の画像",
                 "make_public": "アバターを公開化",
