--- a/html/src/localization/strings/en.json
+++ b/html/src/localization/strings/en.json
@@ -1128,7 +1128,7 @@
         },
         "gallery_icons": {
             "header": "Photos, Icons and Emojis",
-            "description": "Recommended image size 1200x900px",
+            "description": "Recommended image size: 1200x900px (4:3)",
             "gallery": "Photos",
             "icons": "Icons",
             "emojis": "Emojis",
@@ -1190,7 +1190,7 @@
         "totp": {
             "header": "Two-factor Authentication",
             "description": "Enter a numeric code from your authenticator app",
-            "use_otp": "Use OTP",
+            "use_otp": "Use TOTP",
             "verify": "Verify",
             "input_placeholder": "Code",
             "input_error": "Invalid Code"
@@ -1198,7 +1198,7 @@
         "otp": {
             "header": "Two-factor Authentication",
             "description": "Enter one of your saved recovery codes",
-            "use_otp": "Use TOTP",
+            "use_otp": "Use OTP",
             "verify": "Verify",
             "input_placeholder": "Code",
             "input_error": "Invalid Code"
