Small language name fixes

--- a/html/src/localization/strings/vi.json
+++ b/html/src/localization/strings/vi.json
@@ -1,5 +1,5 @@
 {
-    "language": "Vietnamese (vi)",
+    "language": "Tiếng Việt (vi)",
     "translator": "MenacingExiler",
     "nav_tooltip": {
         "feed": "Feed",
