--- a/html/src/localization/strings/zh_CN.json
+++ b/html/src/localization/strings/zh_CN.json
@@ -93,7 +93,7 @@
                 "header": "模型"
             },
             "bulk_unfavorite_mode": "批量取消收藏",
-            "bulk_unfavorite_selection": "批量取消收藏",
+            "bulk_unfavorite_selection": "取消收藏已选择的世界/模型",
             "refresh_tooltip": "刷新所有收藏夹",
             "export": "导出",
             "import": "导入",
@@ -102,7 +102,9 @@
             "visibility_tooltip": "更改可见性",
             "rename_tooltip": "重新命名",
             "clear_tooltip": "清除",
-            "delete_tooltip": "删除"
+            "delete_tooltip": "删除",
+            "unavailable_tooltip": "不可用",
+            "sort_by": "排序方式:"
         },
         "friend_log": {
             "filter_placeholder": "筛选好友日志",
@@ -140,6 +142,7 @@
                 "two_factor_enabled": "已启用",
                 "two_factor_disabled": "已停用",
                 "logout": "登出账户",
+                "manage_gallery_icon": "管理上传的图片/图标/表情",
                 "export_friend_list": "导出好友列表",
                 "export_own_avatars": "导出自己创建的模型",
                 "discord_names": "查看好友的Discord 名称",
@@ -210,6 +213,17 @@
                 "game_log": {
                     "header": "游戏日志",
                     "resource_load": "显示世界内网络资源的加载详情"
+                },
+                "automation": {
+                    "header": "自动化",
+                    "auto_state_change": "自动化状态切换",
+                    "auto_state_change_tooltip": "当房间中有其他人时自动切换状态 (独自一人 / 和其他人在一起时) 如果你不知道这是什么，保持默认关闭即可",
+                    "auto_state_change_off": "关闭",
+                    "auto_state_change_active_or_ask_me": "Active / Ask Me",
+                    "auto_state_change_active_or_busy": "Active / Busy",
+                    "auto_state_change_join_me_or_ask_me": "Join Me / Ask Me",
+                    "auto_state_change_join_me_or_busy": "Join Me / Busy",
+                    "auto_state_change_ask_me_or_busy": "Ask Me / Busy"
                 },
                 "legal_notice": {
                     "header": "法律声明",
@@ -331,7 +345,7 @@
                     "steamvr_overlay": "SteamVR 叠加层",
                     "wrist_feed_overlay": "手腕动态叠加层",
                     "hide_private_worlds": "隐藏私人世界",
-                    "start_overlay_with": "启动时一并启动",
+                    "start_overlay_with": "随.....一并启动",
                     "overlay_button": "叠加层按键",
                     "overlay_button_grip": "握持",
                     "overlay_button_menu": "菜单",
@@ -343,7 +357,7 @@
                     "minimal_feed_icons": "迷你动态图标",
                     "hide_vr_devices": "隐藏 VR 设备",
                     "hide_cpu_usage": "隐藏 CPU 使用率",
-                    "hide_game_uptime": "隐藏启动时长",
+                    "hide_game_uptime": "隐藏游戏启动时长",
                     "show_pc_uptime": "显示计算机启动时长",
                     "wrist_feed_filters": "手腕动态筛选器"
                 }
@@ -353,10 +367,10 @@
                     "header": "Discord Rich Presence集成面板",
                     "description": "* 仅在 VRChat 开启时有效",
                     "enable": "启用",
-                    "enable_tooltip": "建议在 VRChat config.json 中停用原生 Discord 集成面板来防止冲突",
+                    "enable_tooltip": "建议在 VRChat 的 config.json 中停用原生 Discord 集成面板来防止冲突",
                     "instance_type_player_count": "房间种类 / 玩家人数",
                     "join_button": "加入按钮（仅限公开房间）",
-                    "hide_details_in_private": "在私人房间时隐藏世界信息",
+                    "hide_details_in_private": "在私人房间时隐藏房间信息",
                     "hide_images": "隐藏世界缩略图"
                 }
             },
@@ -365,6 +379,7 @@
                     "header": "高级设置",
                     "launch_options": "启动选项",
                     "screenshot_metadata": "屏幕截图元数据查看器",
+                    "common_folders": "常用文件夹",
                     "pending_offline": {
                         "header": "待确认离线",
                         "description": "将玩家标记为离线之前的延迟（防止误判）",
@@ -380,7 +395,7 @@
                     },
                     "vrchat_quit_fix": {
                         "header": "修复VRChat 关闭问题",
-                        "description": "在游戏退出时强制停止 VRChat"
+                        "description": "在VRChat退出时强制停止 VRChat 进程"
                     },
                     "auto_cache_management": {
                         "header": "关闭 VRChat 时自动清理旧缓存",
@@ -400,11 +415,11 @@
                         "header": "视频进度圆饼叠加层",
                         "enable": "启用",
                         "enable_tooltip": "需要启用 SteamVR 叠加层选项",
-                        "dance_world_only": "仅限舞蹈类房间"
+                        "dance_world_only": "仅在舞蹈类房间显示"
                     },
                     "screenshot_helper": {
                         "header": "屏幕截图助手",
-                        "description": "为在游戏中拍摄的任何照片的文件元数据中添加世界ID和世界名称。",
+                        "description": "在游戏内拍摄的照片的元数据中添加 世界ID/世界名称",
                         "description_tooltip": "不幸的是，windows不支持本机查看PNG文本块（很多东西都不支持它），但你可以使用exiftool等命令行工具、png检查器或十六进制编辑器来查看。",
                         "enable": "启用",
                         "modify_filename": "修改文件名",
@@ -430,10 +445,11 @@
                         "avatar_cache": "模型缓存：",
                         "group_cache": "群组信息缓存:",
                         "avatar_name_cache": "模型名称缓存：",
+                        "instance_cache": "房间信息缓存:",
                         "clear_cache": "清除缓存",
                         "auto_clear_cache": "自动清除缓存",
                         "download_history": "下载记录",
-                        "show_console": "显示控制台"
+                        "show_console": "显示界面调试工具"
                     },
                     "sqlite_table_size": {
                         "header": "SQLite 数据库大小",
@@ -497,12 +513,12 @@
     "dialog": {
         "user": {
             "status": {
-                "active": "活跃",
-                "offline": "离线",
-                "online": "在线",
-                "join_me": "加入我",
-                "ask_me": "询问我",
-                "busy": "请勿打扰"
+                "active": "Active",
+                "offline": "Offline",
+                "online": "Online",
+                "join_me": "Join Me",
+                "ask_me": "Ask Me",
+                "busy": "Do Not Disturb"
             },
             "previous_display_names": "曾使用的显示名称：",
             "tags": {
@@ -548,6 +564,11 @@
                 "launch_invite_tooltip": "启动 / 邀请",
                 "self_invite_tooltip": "自我邀请",
                 "refresh_user_count_tooltip": "刷新房间人数",
+                "refresh_instance_info": "刷新房间信息",
+                "instance_queue": "队列状态:",
+                "instance_users": "房间用户:",
+                "instance_game_version": "游戏版本:",
+                "instance_queuing_enabled": "等待队列已开启",
                 "instance_creator": "房间建立者",
                 "note": "VRChat 备注",
                 "note_placeholder": "点击添加备注",
@@ -557,7 +578,7 @@
                 "avatar_info_last_seen": "最后已知模型信息",
                 "represented_group": "展示群组",
                 "bio": "自我介绍",
-                "last_seen": "最后上线",
+                "last_seen": "最后见面",
                 "join_count": "加入次数",
                 "time_together": "一起游玩的时长",
                 "online_for": "在线时长",
@@ -584,9 +605,19 @@
             "worlds": {
                 "header": "创建的世界",
                 "total_count": "总共 {count}",
-                "sort_by_name": "依名称排序",
-                "sort_by_update": "依更新时间排序"
-            },
+                "sort_by": "排序方式:",
+                "order_by": "顺序:",
+                "sorting": {
+                    "updated": "更新时间",
+                    "created": "创建时间",
+                    "favorites": "收藏次数",
+                    "popularity": "热门程度"
+                },
+                "order": {
+                    "descending": "倒序",
+                    "ascending": "顺序"
+                }
+             },
             "favorite_worlds": {
                 "header": "收藏的世界"
             },
@@ -607,6 +638,8 @@
             "tags": {
                 "public": "公开",
                 "private": "私人",
+                "avatar_scaling_disabled": "已关闭模型缩放功能",
+                "future_proofing": "Future Proofing",
                 "labs": "社区实验室",
                 "cache": "缓存"
             },
@@ -617,10 +650,10 @@
                 "refresh": "刷新",
                 "new_instance": "创建新房间",
                 "make_home": "设为出生点",
-                "reset_home": "重置出生点",
+                "reset_home": "重置出生点为默认",
                 "show_previous_instances": "显示加入过的房间",
                 "show_previous_images": "显示使用过的图片",
-                "rename": "重新命名",
+                "rename": "重命名",
                 "change_description": "更改描述",
                 "change_capacity": "更改最大玩家上限",
                 "change_preview": "更改 YouTube 预览",
@@ -643,13 +676,15 @@
             },
             "info": {
                 "header": "信息",
+                "memo": "备注",
+                "memo_placeholder": "点击此处添加备注",
                 "id": "世界 ID",
                 "id_tooltip": "复制到剪贴板",
                 "copy_id": "复制 ID",
                 "copy_url": "复制链接",
                 "copy_name": "复制名称",
                 "youtube_preview": "YouTube 预览",
-                "players": "玩家人数",
+                "players": "地图内人数",
                 "favorites": "收藏次数",
                 "visits": "总拜访次数",
                 "capacity": "最大玩家上限",
@@ -673,6 +708,7 @@
                 "public": "公开",
                 "private": "私人",
                 "fallback": "后备",
+                "future_proofing": "Future Proofing",
                 "cache": "缓存"
             },
             "labels": {
@@ -752,6 +788,7 @@
             "info": {
                 "header": "信息",
                 "announcement": "公告",
+                "instances": "房间列表",
                 "instance_full": "房间已满",
                 "rules": "规则",
                 "members": "成员",
@@ -784,7 +821,10 @@
                 "filters": {
                     "everyone": "所有人",
                     "users_with_no_role": "没有身份组的成员"
-                }
+                },
+                "unsubscribed_announcements": "不接收公告通知",
+                "visibility": "可见性:",
+                "representing": "展示状态"
             },
             "gallery": {
                 "header": "相册"
@@ -826,16 +866,16 @@
         "new_instance": {
             "header": "新房间",
             "access_type": "房间类型",
-            "access_type_public": "公开",
-            "access_type_group": "群组",
-            "access_type_friend_plus": "好友+",
-            "access_type_friend": "好友",
-            "access_type_invite_plus": "邀请+",
-            "access_type_invite": "邀请",
+            "access_type_public": "Public",
+            "access_type_group": "Group",
+            "access_type_friend_plus": "Friends+",
+            "access_type_friend": "Friends",
+            "access_type_invite_plus": "Invite+",
+            "access_type_invite": "Invite",
             "group_access_type": "房间类型",
             "group_access_type_members": "仅限群组成员",
-            "group_access_type_plus": "群组+",
-            "group_access_type_public": "公开",
+            "group_access_type_plus": "Group+",
+            "group_access_type_public": "Public",
             "region": "地区",
             "region_usw": "美国西部",
             "region_use": "美国东部",
@@ -882,10 +922,12 @@
             "sweep_cache": "清理缓存",
             "max_cache_size": "最大缓存大小 [GB] （最小 20GB）",
             "cache_expiry_delay": "缓存保存时长 [日] （30 - 150）",
-            "cache_directory": "覆盖缓存文件夹位置",
-            "fpv_steadycam_fov": "第一人称平滑镜头视野范围",
+            "cache_directory": "缓存文件夹位置",
+            "picture_directory": "截图文件夹位置",
+            "fpv_steadycam_fov": "第一人称镜头FOV度数",
             "camera_resolution": "相机分辨率",
             "screenshot_resolution": "屏幕截图分辨率",
+            "picture_sort_by_date": "将图片按日期分类到文件夹中",
             "disable_discord_presence": "停用原生 Discord Rich Presence集成面板",
             "vrchat_docs": "VRChat 文档",
             "cancel": "取消",
@@ -900,8 +942,11 @@
         },
         "set_world_tags": {
             "header": "设置世界标签",
+            "avatar_scaling_disabled": "关闭模型缩放",
             "enable_debugging": "为其他人启用世界调试菜单",
             "seprator": "使用逗号来分隔每个标签",
+            "author_tags": "作者添加的标签（以逗号分隔）",
+            "content_tags": "Content Tags (以逗号分隔)",
             "cancel": "取消",
             "save": "保存"
         },
@@ -1090,9 +1135,11 @@
             "description": "推荐图片尺寸：1200 像素 x 900 像素",
             "gallery": "相册",
             "icons": "图标",
+            "emojis": "Emojis(表情符号)",
             "refresh": "刷新",
             "upload": "上传",
-            "clear": "清除"
+            "clear": "清除",
+            "emoji_animation_styles": "动画样式"
         },
         "change_content_image": {
             "avatar": "更改模型图片",
@@ -1105,8 +1152,8 @@
             "header": "曾使用过的图片"
         },
         "previous_instances": {
-            "header": "曾一起加入过的房间",
-            "info": "曾一起加入的房间信息",
+            "header": "曾加入过的房间",
+            "info": "曾加入的房间信息",
             "search_placeholder": "搜索"
         },
         "change_log": {
@@ -1185,7 +1232,7 @@
             }
         },
         "direct_access_user_id": {
-            "header": "直接打开",
+            "header": "打开玩家资料页",
             "description": "输入玩家链接或玩家 ID (UUID)",
             "cancel": "取消",
             "ok": "OK",
@@ -1195,14 +1242,14 @@
             }
         },
         "direct_access_username": {
-            "header": "直接打开",
+            "header": "打开玩家资料页",
             "description": "输入玩家名称",
             "cancel": "取消",
             "ok": "OK",
             "input_error": "需要玩家名称"
         },
         "direct_access_world_id": {
-            "header": "直接打开",
+            "header": "查看世界详细信息",
             "description": "输入世界链接或世界 ID (UUID)",
             "cancel": "取消",
             "ok": "OK",
@@ -1212,7 +1259,7 @@
             }
         },
         "direct_access_avatar_id": {
-            "header": "直接打开",
+            "header": "打开模型资料页",
             "description": "输入模型链接或模型 ID (UUID)",
             "cancel": "取消",
             "ok": "OK",
@@ -1223,7 +1270,7 @@
         },
         "direct_access_omni": {
             "header": "直接打开",
-            "description": "输入玩家 / 世界 / 房间 / 模型链接 或 唯一ID (UUID)",
+            "description": "输入玩家 / 世界 / 房间 / 模型链接 或 唯一ID",
             "cancel": "取消",
             "ok": "OK",
             "input_error": "需要链接或 ID",
@@ -1417,7 +1464,7 @@
             "bioLink": "社交链接",
             "joinCount": "一起玩的次数",
             "timeTogether": "一起玩的时长",
-            "lastSeen": "最后上线",
+            "lastSeen": "最后见面",
             "lastActivity": "最后活动",
             "lastLogin": "最后登录",
             "dateJoined": "账户创建时间",
@@ -1469,7 +1516,7 @@
     "vr": {
         "status": {
             "timer": "时长：",
-            "players": "玩家人数：",
+            "players": "人数：",
             "cpu": "CPU：",
             "online": "在线："
         }
