--- a/html/src/localization/strings/zh_CN.json
+++ b/html/src/localization/strings/zh_CN.json
@@ -92,7 +92,7 @@
             "avatars": {
                 "header": "模型"
             },
-            "bulk_unfavorite_mode": "批量取消收藏",
+            "bulk_unfavorite_mode": "批量删除模式",
             "bulk_unfavorite_selection": "取消收藏已选择的世界/模型",
             "refresh_tooltip": "刷新所有收藏夹",
             "export": "导出",
@@ -111,8 +111,8 @@
             "search_placeholder": "搜索好友日志"
         },
         "moderation": {
-            "filter_placeholder": "筛选玩家管理动作",
-            "search_placeholder": "搜索玩家管理动作",
+            "filter_placeholder": "筛选管理动作",
+            "search_placeholder": "搜索",
             "refresh_tooltip": "刷新"
         },
         "notification": {
@@ -122,7 +122,7 @@
         },
         "friend_list": {
             "header": "好友列表",
-            "bulk_unfriend": "批量解除好友关系",
+            "bulk_unfriend": "批量删除模式",
             "bulk_unfriend_selection": "批量删除已选择的好友",
             "load": "读取缺失的项目",
             "load_notice": "这会向 API 发送大量请求，所以请谨慎使用",
@@ -255,7 +255,7 @@
                     "sort_instance_users_by": "房间玩家排序依据",
                     "sort_instance_users_by_time": "时间",
                     "sort_instance_users_by_alphabet": "字母顺序",
-                    "table_max_size": "最大显示记录设置",
+                    "table_max_size": "最大显示记录",
                     "page_size": "页面大小："
                 },
                 "timedate": {
@@ -418,11 +418,11 @@
                         "dance_world_only": "仅在舞蹈类房间显示"
                     },
                     "screenshot_helper": {
-                        "header": "屏幕截图助手",
-                        "description": "在游戏内拍摄的照片的元数据中添加 世界ID/世界名称",
+                        "header": "截图助手",
+                        "description": "在游戏拍摄的照片的元数据中添加世界ID/世界名称",
                         "description_tooltip": "不幸的是，windows不支持本机查看PNG文本块（很多东西都不支持它），但你可以使用exiftool等命令行工具、png检查器或十六进制编辑器来查看。",
                         "enable": "启用",
-                        "modify_filename": "修改文件名",
+                        "modify_filename": "同时修改文件名",
                         "modify_filename_tooltip": "除了文件元数据外，还将把世界ID添加到截图文件名中。"
                     },
                     "app_launcher": {
@@ -500,15 +500,15 @@
         "search_result_offline": "离线",
         "search_result_more": "搜索更多：",
         "direct_access_tooltip": "直接读取剪贴板的 ID / 链接",
-        "refresh_tooltip": "刷新好友",
+        "refresh_tooltip": "刷新好友列表",
         "groups": "群组房间",
         "friends": "好友",
         "me": "我",
         "favorite": "星标好友",
         "online": "在线",
-        "active": "活跃中",
+        "active": "活跃中(仅登录网页端)",
         "offline": "离线",
-        "penfing_offline": "待确认离线"
+        "pending_offline": "可能离线"
     },
     "dialog": {
         "user": {
@@ -531,9 +531,9 @@
                 "refresh": "刷新",
                 "copy_url": "复制玩家链接",
                 "invite": "邀请",
-                "invite_with_message": "邀请（附加上消息）",
-                "request_invite": "请求邀请",
-                "request_invite_with_message": "请求邀请（附加上消息）",
+                "invite_with_message": "发送带消息的邀请",
+                "request_invite": "请求加入",
+                "request_invite_with_message": "发送带消息的加入请求",
                 "invite_to_group": "邀请到群组",
                 "manage_gallery_icon": "管理相册 / 图标",
                 "accept_friend_request": "接受好友申请",
@@ -557,7 +557,7 @@
                 "edit_bio": "自我介绍",
                 "report_hacking": "报告这个用户的作弊行为(例如盗模)",
                 "unfriend": "解除好友关系",
-                "logout": "注销"
+                "logout": "登出"
             },
             "info": {
                 "header": "信息",
@@ -683,13 +683,13 @@
                 "copy_id": "复制 ID",
                 "copy_url": "复制链接",
                 "copy_name": "复制名称",
-                "youtube_preview": "YouTube 预览",
+                "youtube_preview": "YouTube 预览链接",
                 "players": "地图内人数",
                 "favorites": "收藏次数",
                 "visits": "总拜访次数",
-                "capacity": "最大玩家上限",
+                "capacity": "最大人数上限",
                 "heat": "热度",
-                "popularity": "热门度",
+                "popularity": "知名度",
                 "created_at": "创建时间",
                 "last_updated": "最后更新",
                 "version": "版本",
@@ -905,7 +905,7 @@
             "header": "启动选项",
             "description": "这些选项仅适用于高级用户。",
             "example": "更改 FPS 限制：--fps=<N> 例：",
-            "path_override": "覆盖VRChat客户端位置",
+            "path_override": "VRChat客户端位置",
             "vrchat_docs": "VRChat 文档",
             "unity_manual": "Unity 手册",
             "save": "保存"
@@ -918,7 +918,7 @@
             "refresh": "刷新",
             "delete_all_cache": "删除所有缓存",
             "delete_cache": "删除缓存",
-            "delete_old_cache": "从缓存中删除旧版本",
+            "delete_old_cache": "从缓存中删除无效数据",
             "sweep_cache": "清理缓存",
             "max_cache_size": "最大缓存大小 [GB] （最小 20GB）",
             "cache_expiry_delay": "缓存保存时长 [日] （30 - 150）",
@@ -1077,7 +1077,7 @@
             "description2": "请注意以下限制：",
             "description3": "- API 接口有速率限制，每个请求之间会有很大的延迟。",
             "description4": "- 每个备注的字数限制为 256 个字符。",
-            "description5": "- 脏话过滤器（一点乐趣都没有）。",
+            "description5": "- 有脏话过滤器（一点乐趣都没有）。",
             "description6": "- 不能换行（换行符将会被替换成空格）。",
             "description7": "- 这将会覆盖这些玩家现有的任何 VRChat 备注。",
             "description8": "- 在这里所做的任何编辑都不会影响 VRCX 备忘录，但会在导出后会影响 VRChat 备注。",
@@ -1313,7 +1313,7 @@
             }
         },
         "rename_world": {
-            "header": "重新命名世界",
+            "header": "重命名世界",
             "description": "输入世界名称",
             "cancel": "取消",
             "ok": "OK",
@@ -1355,7 +1355,7 @@
         },
         "change_table_size": {
             "header": "最大显示记录",
-            "description": "限制从数据库读取记录到接口的数量，较大的数据表大小可能会影响内存用量和效能 （预设：1000）",
+            "description": "限制从数据库读取记录到接口的数量，较大的数据表大小可能会影响内存用量和程序性能 （预设：1000）",
             "cancel": "取消",
             "save": "保存",
             "input_error": "请输入有效的行数"
@@ -1385,7 +1385,7 @@
             }
         },
         "local_favorite_group_rename": {
-            "header": "重新命名收藏夹",
+            "header": "重命名收藏夹",
             "description": "输入世界收藏夹名",
             "cancel": "取消",
             "save": "保存",
@@ -1396,7 +1396,7 @@
         },
         "pending_offline_delay": {
             "header": "待确认离线",
-            "description": "设置将玩家标记为离线之前的延迟秒数（预设：110）",
+            "description": "设置将玩家标记为离线之前的延迟(秒)（预设：110）",
             "cancel": "取消",
             "save": "保存",
             "input_error": "请输入有效的秒数"
