--- a/html/src/localization/strings/zh_CN.json
+++ b/html/src/localization/strings/zh_CN.json
@@ -588,7 +588,7 @@
                 "date_joined": "账户创建日期",
                 "friended": "添加为好友的时间",
                 "unfriended": "解除好友的时间",
-                "avatar_cloning": "模型复制状态",
+                "avatar_cloning": "是否允许克隆模型",
                 "avatar_cloning_allow": "允许",
                 "avatar_cloning_deny": "不允许",
                 "home_location": "出生点",
