--- a/html/src/localization/strings/zh_CN.json
+++ b/html/src/localization/strings/zh_CN.json
@@ -579,7 +579,7 @@
                 "represented_group": "展示群组",
                 "bio": "自我介绍",
                 "last_seen": "最后见面",
-                "join_count": "加入次数",
+                "join_count": "见面的次数",
                 "time_together": "一起游玩的时长",
                 "online_for": "在线时长",
                 "offline_for": "离线时长",
